Student Scheduling Assistant (UniTime 3.3 Merge) - List of Classes: added credit information (merged from trunk, revision 3210) - Course Finder: added button Select (does the same thing as pressing Enter; merged from trunk, revision 3211) - Alternatives: align the arrows, add a note bellow the table describing the color scheme (merged from trunk, revision 3212) - Update Czech translations with the latest changes (merged from trunk, revision 3213) - Alternatives: show a grid as a mouseover tooltip for each suggestion (merged from trunk, revision 3214) - Course Requests: deleting a course will no longer disable its alternative (or second alternative) if it is not empty (merged from trunk, revision 3215) - Alternatives: do not cache the tooltip between different suggestions (merged from trunk, revision 3216) - List of Classes, Course Finder, Alternatives: change mouse cursor to pointer when the line is clickable (merged from trunk, revision 3217) - Course Finder: disable scrolling of the page while the Course Finder dialog is open (merged from trunk, revision 3218) - Alternatives: disable scrolling of the page while the Alternatives dialog is open (merged from trunk, revision 3219) - List of Classes: Requires column -- only allow the text to wrap when it is more than 10 characters long (merged from trunk, revision 3220) - Alternatives: position of the grid tooltip shifted a little so that it does not overlap with the line on which the mouse cursor is (merged from trunk, revision 3221)

--- a/branches/maint_UniTime33/WebContent/styles/unitime.css
+++ b/branches/maint_UniTime33/WebContent/styles/unitime.css
@@ -1290,3 +1290,42 @@ h1 {
 	text-overflow: ellipsis;
 	overflow: hidden;
 }
+
+.unitime-SuggestionsLegend {
+	width: 100%;
+	font-size: x-small;
+	font-style: italic;
+	color: #9CB0CE;
+	text-align: right;
+	margin-top: -2px;
+	margin-bottom: 5px;
+}
+
+.unitime-SuggestionsMessage {
+	color: red;
+}
+
+.unitime-SuggestionsHint {
+	position: absolute;
+	font-size: small;
+	font-family: arial;
+	overflow: hidden;
+	filter: alpha(opacity = 90);
+	opacity: .90;
+    -moz-opacity: .90;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	padding: 4px;
+	color: #000000;
+	background: #FFFDDD;
+	border: 1px solid #AB8B00;
+	z-index: 1000000;
+	overflow: visible;
+}
+
+.unitime-SuggestionsHintWidget {
+	zoom:50%;
+	display: inline-block;
+	-moz-transform: scale(0.5);
+	-moz-transform-origin: top left;
+}
